force-app/main/default/objects/Plot__c/fields/Basic_Price1__c.field-meta.xml
<CustomField>
    <fullName>Basic_Price1__c</fullName>
    <formula>(Super_built_up_area__c* (Price_Per_Sq_Ft__c + Floor_Rise__c + Premium_Charge__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>