force-app/main/default/objects/Plot__c/fields/Basic_Sale_Price_Rs__c.field-meta.xml
<CustomField>
    <fullName>Basic_Sale_Price_Rs__c</fullName>
    <formula>Basic_Price1__c + Covered_Park_Parking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Sale Price (Rs.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>