force-app/main/default/objects/Plot__c/fields/BHK_Type__c.field-meta.xml
<CustomField>
    <fullName>BHK_Type__c</fullName>
    <label>BHK Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>3 BHK + 2T</fullName>
            </value>
            <value>
                <fullName>4BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>