force-app/main/default/objects/Plot__c/fields/Block1__c.field-meta.xml
<CustomField>
    <fullName>Block1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Block__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>