force-app/main/default/objects/Plot__c/fields/Covered_Park_Parking__c.field-meta.xml
<CustomField>
    <fullName>Covered_Park_Parking__c</fullName>
    <label>Covered Park Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>