force-app/main/default/objects/Plot__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <formula>Sub_total__c * GST1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>