force-app/main/default/objects/Plot__c/fields/GST_on_Corpus_Fund__c.field-meta.xml
<CustomField>
    <fullName>GST_on_Corpus_Fund__c</fullName>
    <label>GST % on Corpus Fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>