force-app/main/default/objects/Plot__c/fields/GST_on_Maintenance_Charge__c.field-meta.xml
<CustomField>
    <fullName>GST_on_Maintenance_Charge__c</fullName>
    <label>GST % on Maintenance Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>