force-app/main/default/objects/Plot__c/fields/Is_Premium_Unit__c.field-meta.xml
<CustomField>
    <fullName>Is_Premium_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>premium unit or not</description>
    <label>Is Premium Unit</label>
    <type>Checkbox</type>
</CustomField>