force-app/main/default/objects/Plot__c/fields/Is_PSA_Unit__c.field-meta.xml
<CustomField>
    <fullName>Is_PSA_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PSA Unit</label>
    <type>Checkbox</type>
</CustomField>