force-app/main/default/objects/Plot__c/fields/Maintenance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Charge__c</fullName>
    <label>Maintenance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>