force-app/main/default/objects/Plot__c/fields/Premium_Charge__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charge__c</fullName>
    <label>Premium Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>