force-app/main/default/objects/Plot__c/fields/Price_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Sq_Ft__c</fullName>
    <label>Price Per Sq Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>