force-app/main/default/objects/Plot__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Project_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Plots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>