force-app/main/default/objects/Plot__c/fields/Proportionate_Common_Area__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Common_Area__c</fullName>
    <label>Proportionate Common Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>