force-app/main/default/objects/Plot__c/fields/QA_Given__c.field-meta.xml
<CustomField>
    <fullName>QA_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>quality assurance for the unit</description>
    <label>QA Given</label>
    <type>Checkbox</type>
</CustomField>