force-app/main/default/objects/Plot__c/fields/QA_Given_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Given_Date__c</fullName>
    <label>QA Given Date</label>
    <type>DateTime</type>
</CustomField>