force-app/main/default/objects/Plot__c/fields/Solar_Charges__c.field-meta.xml
<CustomField>
    <fullName>Solar_Charges__c</fullName>
    <label>Solar Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>