force-app/main/default/objects/Plot__c/fields/Sub_total__c.field-meta.xml
<CustomField>
    <fullName>Sub_total__c</fullName>
    <formula>Basic_Sale_Price_Rs__c + Total_Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>