force-app/main/default/objects/Plot__c/fields/Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Area__c</fullName>
    <label>Open Terrace Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>