force-app/main/default/objects/Plot__c/fields/Total_Maintenance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_Charge__c</fullName>
    <formula>Maintenance_Charge__c *  Super_built_up_area__c *36</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Maintenance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>