force-app/main/default/objects/Plot__c/fields/UDS_Sq_mts__c.field-meta.xml
<CustomField>
    <fullName>UDS_Sq_mts__c</fullName>
    <label>UDS (Sq mts.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>