force-app/main/default/objects/Plot__c/fields/Unit_Facing_Direction__c.field-meta.xml
<CustomField>
    <fullName>Unit_Facing_Direction__c</fullName>
    <label>Unit Facing Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
                <label>East/North</label>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>WEST/NORTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>