force-app/main/default/objects/Plot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Block1__c</columns>
    <columns>Project__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Floor__c</columns>
    <columns>Plot_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Is_PSA_Unit__c</columns>
    <columns>Price_Per_Sq_Ft__c</columns>
    <columns>Super_built_up_area__c</columns>
    <columns>GST1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>