force-app/main/default/objects/Plot__c/listViews/Booked_Units.listView-meta.xml
<ListView>
    <fullName>Booked_Units</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Block1__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </filters>
    <label>Booked Units</label>
</ListView>